--- a/Finalmodel.ipynb
+++ b/Finalmodel.ipynb
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -70,7 +70,11 @@
             "Epoch 2/5\n",
             "1563/1563 [==============================] - 162s 104ms/step - loss: 1.6534 - accuracy: 0.4038\n",
             "Epoch 3/5\n",
-            "1153/1563 [=====================>........] - ETA: 42s - loss: 1.5136 - accuracy: 0.4547"
+            "1563/1563 [==============================] - 162s 104ms/step - loss: 1.4985 - accuracy: 0.4601\n",
+            "Epoch 4/5\n",
+            "1563/1563 [==============================] - 160s 102ms/step - loss: 1.3913 - accuracy: 0.5012\n",
+            "Epoch 5/5\n",
+            "1563/1563 [==============================] - 162s 104ms/step - loss: 1.3046 - accuracy: 0.5329\n"
           ]
         }
       ],
